Adjust translation to elide the top-level instanceof check (and `null`-check) when they are not needed.